@@ -1,4 +1,0 @@
-.rtl .external, a.feedlink {
-	padding: 0 !important;
-	background: none !important;
-}
